# eva

./: .gitignore  CMakeLists.txt  LICENSE  LINUX_CLANG_COMPATIBILITY.md  test.sh
.github/workflows/: vktest.yml
samples/matmul/: CMakeLists.txt  main.cpp  timeChecker.hpp
samples/matmul/shaders/: mm-naive-t.comp  mm-naive.comp
samples/profile/: CMakeLists.txt  counters.tsv  counters.txt  main.cpp
samples/profile/shaders/: vector-add.comp
samples/quantization/: CMakeLists.txt  main.cpp
samples/quantization/shaders/: convert-bf16-pack.comp  convert-fp16-native.comp  convert-fp16-pack.comp  dequantize.comp  matmul-bf16-packed.comp  matmul-fp16-native.comp  matmul-fp16-packed.comp  matmul-fp32.comp  matmul-int8-packed.comp  matmul-int8.comp  pack.comp  quantize-pack.comp  quantize.comp  transpose.comp
samples/raytracing/: CMakeLists.txt  main.cpp
samples/raytracing/shaders/: chit.rchit  raygen.rgen
src/: eva-buffer-pool.h  eva-enums.h  eva-error.h  eva-native-factory.h  eva-pipeline-binary.cpp  eva-pipeline-binary.h  eva-runtime.cpp  eva-runtime.h  eva-spirv-reflect.cpp
